[gd_scene load_steps=3 format=3 uid="uid://dxepglcm8bh2q"]

[ext_resource type="Script" path="res://game/tabs/levels/tree/building.gd" id="1_uirui"]
[ext_resource type="Texture2D" uid="uid://dl67ji1j5c0k8" path="res://icon.svg" id="2_o16ir"]

[node name="Tree" type="TextureButton"]
offset_right = 128.0
offset_bottom = 128.0
mouse_filter = 1
texture_normal = ExtResource("2_o16ir")
stretch_mode = 0
script = ExtResource("1_uirui")

[node name="VBoxContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_top = -26.0
offset_right = 126.0
offset_bottom = 127.0
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="VBoxContainer"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 1
text = "cost"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
